fixed extra spacing issue

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   font-weight: 300;
 }
 
+body { overflow-x: hidden; }
+
 .service-5 h1, .service-5 h2, .service-5 h3, .service-5 h4, .service-5 h5, .service-5 h6 {
   color: #3e4555;
 }
